--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
     <head>
         <meta charset="utf-8">
         <meta lang="en">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Best page ever</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
-        <h1>This is a webpage</h1>
+        <div class="container">
+            <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+            <a class="navbar-brand" href="#">Navabar</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="turing.html" class="nav-link">Turing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                </li> 
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                </li>
+            </ul>
+        </nav>
+        </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </html>
