--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
+                <li class="nav-item"></li>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
+                </li>
                 <li class="nav-item">
                     <a href="turing.html" target="_blank" class="nav-link">Turing</a>
                 </li>
