--- a/turing.html
+++ b/turing.html
@@ -7,6 +7,24 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+            <a class="navbar-brand mx-2" href="#">Teamwork</a>
+            <ul class="navbar-nav">
+                <li class="nav-item"></li>
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link active" aria-current="page">Turing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                </li> 
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                </li>
+            </ul>
+        </nav>
+
         <h1>The work of Alan Turing and Bletchley Park</h1>
 
         <p>
