I added an image of the enigma machine to the turing page

--- a/turing.html
+++ b/turing.html
@@ -7,17 +7,35 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
+        <div class="container">
+            <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+            <a class="navbar-brand" href="#">Navabar</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="turing.html" class="nav-link">Turing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                </li> 
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                </li>
+            </ul>
+        </nav>
+        </div>
         <h1>The work of Alan Turing and Bletchley Park</h1>
 
         <p>
             During World War 2 the main way that the Nazi would communicate was through morse code. 
             Their messages would be encrypted by the Enigma, machine which would use a set of rotating wheels and a pinboard to scramble the message.
             <br><br>
-            Below is a picture of the Bombe
+            
         </p>
-
-        <img src="pictures/bombe.jpg">
-
+        <img src="pictures/bombe.jpg" width="50%">
+        <img src="pictures/enigma.jpg" width="50%">
 
     </body>
 </html>
