--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <a class="navbar-brand" href="#">Navabar</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="turing.html" target="_blank" class="nav-link">Turing</a>
+                    <a href="turing.html"class="nav-link">Turing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" target="_blank" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
-                    <a href="#" target="_blank" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
                 </li>
             </ul>
         </nav>
