Added link to the Assamee page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                    <a href="Assamee.html" class="nav-link">Assamee</a>
                 </li>
             </ul>
         </nav>
