--- a/Assamee.html
+++ b/Assamee.html
@@ -9,7 +9,6 @@
   
   <body>
     <h1>Artificial Intelegence</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
     <p>
       Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning (the acquisition of information and rules for using the information), reasoning (using rules to reach approximate or definite conclusions), and self-correction. Specific applications of AI include expert systems, speech recognition, and machine vision.
@@ -17,9 +16,20 @@
 
     <img src="pictures/AI.jpeg" width="200px" height="200px">    
 
-
-
-
+    <table>
+        <tr>
+        <th>Pros of AI</th>
+        <th>Cons of AI</th>
+      </tr>
+      <tr>
+        <td> <img src="pictures/AI.jpeg" width="200px" height="200px">
+        Efficiency and Automation: AI can perform tasks faster and more accurately than humans, leading to increased productivity and efficiency in various industries.
+        </td>
+        <td>Job Displacement: The automation of tasks through AI can lead to job losses in certain sectors, particularly for roles that involve repetitive or routine tasks.</td>
+      </tr>
+      <tr>
+        <td>Data Analysis and Insights: AI can analyze vast amounts of data quickly, uncovering patterns and insights that may not be apparent to human analysts.</
+    </table>
 
 
 
