navbar fixed for joshs page and for assamees page

--- a/turing.html
+++ b/turing.html
@@ -14,26 +14,28 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">Turing</a>
+                    <a href="turing.html" class="nav-link active" aria-current="page">Turing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                    <a href="medicine.html" class="nav-link">Josh</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                    <a href="Assamee.html" class="nav-link">Assamee</a>
                 </li>
             </ul>
         </nav>
-        <h1>The work of Alan Turing and Bletchley Park</h1>
+        <div class="p-3 mb-2 bg-secondary text-white">
+            <h1>The work of Alan Turing and Bletchley Park</h1>
 
-        <p>
-            During World War 2 the main way that the Nazi would communicate was through morse code. 
-            Their messages would be encrypted by the Enigma, machine which would use a set of rotating wheels and a pinboard to scramble the message.
-            <br><br>
-            
-        </p>
-        <img src="pictures/bombe.jpg" width="50%">
-        <img src="pictures/enigma.jpg" width="50%">
+            <p>
+                During World War 2 the main way that the Nazi would communicate was through morse code. 
+                Their messages would be encrypted by the Enigma, machine which would use a set of rotating wheels and a pinboard to scramble the message.
+                <br><br>
+
+            </p>
+            <img src="pictures/bombe.jpg" width="50%">
+            <img src="pictures/enigma.jpg" width="50%">
+        </div>
 
     </body>
 </html>
