--- a/Assamee.html
+++ b/Assamee.html
@@ -8,14 +8,34 @@
   </head>
   
   <body>
-    <h1>Artificial Intelegence</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+      <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+          <a class="navbar-brand mx-2" href="#">Teamwork</a>
+            <ul class="navbar-nav">
+                <li class="nav-item"></li>
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="turing.html" class="nav-link">Turing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="medicine.html" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                </li> 
+                <li class="nav-item">
+                    <a href="Assamee.html" class="nav-link active" aria-current="page">Assamee</a>
+                </li>
+            </ul>
+        </nav>
+    <div class="p-3 mb-2 bg-secondary text-white">
+      <h1>Artificial Intelegence</h1>
+    
 
-    <p>
-      Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning (the acquisition of information and rules for using the information), reasoning (using rules to reach approximate or definite conclusions), and self-correction. Specific applications of AI include expert systems, speech recognition, and machine vision.
-    </p>
+      <p>
+        Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning (the acquisition of information and rules for using the information), reasoning (using rules to reach approximate or definite conclusions), and self-correction. Specific applications of AI include expert systems, speech recognition, and machine vision.
+      </p>
 
-    <img src="pictures/AI.jpeg" width="200px" height="200px">    
+      <img src="pictures/AI.jpeg" width="200px" height="200px">
+    
+    </div>
 
 
 
