--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
                 <li class="nav-item"></li>
-                    <a href="#" class="nav-link active" aria-current="page">Home</a>
+                    <a href="#"  class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="turing.html" class="nav-link">Turing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Josh</a><!--Add link to Josh's website-->
+                    <a href="medicine.html" class="nav-link">Josh</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
                     <a href="Assamee.html" class="nav-link">Assamee</a>
