Added some more.

--- a/Assamee.html
+++ b/Assamee.html
@@ -14,15 +14,24 @@
       Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning (the acquisition of information and rules for using the information), reasoning (using rules to reach approximate or definite conclusions), and self-correction. Specific applications of AI include expert systems, speech recognition, and machine vision.
     </p>
 
-    <img src="pictures/AI.jpeg" width="200px" height="200px">    
-
     <table>
+        <tr>
+        <td>
+            <img src="pictures/AI.jpeg" width="200px" height="200px">    
+        </td>
+        <td>
+            <img src="pictures/AI2.jpeg" width="200px" height="200px">
+        </tr>
+    </table>
+
+
+    <table margin="20px" border="1px">
         <tr>
         <th>Pros of AI</th>
         <th>Cons of AI</th>
       </tr>
       <tr>
-        <td> <img src="pictures/AI.jpeg" width="200px" height="200px">
+        <tr width="200px" height="200px">
         Efficiency and Automation: AI can perform tasks faster and more accurately than humans, leading to increased productivity and efficiency in various industries.
         </td>
         <td>Job Displacement: The automation of tasks through AI can lead to job losses in certain sectors, particularly for roles that involve repetitive or routine tasks.</td>
