Changed Assamee header in the nav bar to Artificial Intelegence and removed rough picture

--- a/Assamee.html
+++ b/Assamee.html
@@ -21,7 +21,7 @@
                     <a href="medicine.html" class="nav-link">Medicine</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
-                    <a href="Assamee.html" class="nav-link active" aria-current="page">Assamee</a>
+                    <a href="Assamee.html" class="nav-link active" aria-current="page">Artificial Intelligence</a>
                 </li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
         <th>Cons of AI</th>
       </tr>
       <tr>
-        <td> <img src="pictures/AI.jpeg" width="200px" height="200px">
+        <td>
         Efficiency and Automation: AI can perform tasks faster and more accurately than humans, leading to increased productivity and efficiency in various industries.
         </td>
         <td>Job Displacement: The automation of tasks through AI can lead to job losses in certain sectors, particularly for roles that involve repetitive or routine tasks.</td>
