--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="medicine.html" class="nav-link">Medicine</a>
                 </li> 
                 <li class="nav-item">
-                    <a href="Assamee.html" class="nav-link">Assamee</a>
+                    <a href="Assamee.html" class="nav-link">Artificial Intelligence</a>
                 </li>
             </ul>
         </nav>
