--- a/medicine.html
+++ b/medicine.html
@@ -21,7 +21,7 @@
                     <a href="medicine.html" class="nav-link active" aria-current="page">Medicine</a>
                 </li> 
                 <li class="nav-item">
-                    <a href="Assamee.html" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                    <a href="Assamee.html" class="nav-link">Artificial Intelligence</a><!--Add link to Assamee's website-->
                 </li>
             </ul>
         </nav>
