--- a/turing.html
+++ b/turing.html
@@ -20,11 +20,11 @@
                     <a href="medicine.html" class="nav-link">Medicine</a><!--Add link to Josh's website-->
                 </li> 
                 <li class="nav-item">
-                    <a href="Assamee.html" class="nav-link">Assamee</a><!--Add link to Assamee's website-->
+                    <a href="Assamee.html" class="nav-link">Artificial Intelligence</a><!--Add link to Assamee's website-->
                 </li>
             </ul>
         </nav>
-        <div class="p-3 mb-2 bg-secondary text-white">
+        <div class="text-center p-3 mb-2 bg-secondary text-white">
             <h1>The work of Alan Turing and Bletchley Park</h1>
 
             <p>
