Added info into the table

--- a/Assamee.html
+++ b/Assamee.html
@@ -32,14 +32,8 @@
       <p>
         Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning (the acquisition of information and rules for using the information), reasoning (using rules to reach approximate or definite conclusions), and self-correction. Specific applications of AI include expert systems, speech recognition, and machine vision.
       </p>
-
-<<<<<<< HEAD
-=======
-      <img src="pictures/AI.jpeg" width="200px" height="200px">
-    
     </div>
 
->>>>>>> 7b6b3a709024555fda8d3251d21c1fb0652742de
     <table>
         <tr>
         <td>
@@ -50,20 +44,25 @@
         </tr>
     </table>
 
-
-    <table margin="20px" border="1px">
+    <br>
+    <table class="table table-bordered border-primary" margin="20px" border="1px">
         <tr>
         <th>Pros of AI</th>
         <th>Cons of AI</th>
       </tr>
       <tr>
-        <tr width="200px" height="200px">
+        <td>
         Efficiency and Automation: AI can perform tasks faster and more accurately than humans, leading to increased productivity and efficiency in various industries.
         </td>
-        <td>Job Displacement: The automation of tasks through AI can lead to job losses in certain sectors, particularly for roles that involve repetitive or routine tasks.</td>
-      </tr>
-      <tr>
-        <td>Data Analysis and Insights: AI can analyze vast amounts of data quickly, uncovering patterns and insights that may not be apparent to human analysts.</
+        <td>Job Displacement: The automation of tasks through AI can lead to job losses in certain sectors, particularly for roles that involve repetitive or routine tasks.
+        </td>    
+        </tr>
+        <tr>
+        <td>Data Analysis and Insights: AI can analyze vast amounts of data quickly, uncovering patterns and insights that may not be apparent to human analysts.
+        </td>
+        <td>Privacy Concerns: The use of AI often involves collecting and analyzing large amounts of personal data, raising concerns about data privacy and security.
+        </td>
+        </tr>
     </table>
 
 
