--- a/index.html
+++ b/index.html
@@ -8,22 +8,31 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
-            <a class="navbar-brand mx-2" href="#">Teamwork</a>
-            <ul class="navbar-nav">
-                <li class="nav-item"></li>
-                    <a href="index.html" class="nav-link active" aria-current="page">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="turing.html" class="nav-link">Turing</a>
-                </li>
-                <li class="nav-item">
-                    <a href="medicine.html" class="nav-link">Medicine</a>
-                </li> 
-                <li class="nav-item">
-                    <a href="Assamee.html" class="nav-link">Assamee</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand mx-2" href="#">Teamwork</a>
+                <ul class="navbar-nav">
+                    <li class="nav-item"></li>
+                        <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="turing.html" class="nav-link">Turing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="medicine.html" class="nav-link">Medicine</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a href="Assamee.html" class="nav-link">Assamee</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item m-0 p-0">
+                        <a href="https://github.com/TheFlugeler/teamwork-makes-the-dreamwork" class="nav-link m-0 p-0">
+                            <img src="pictures/github.png" width="50" height="50">
+                        </a>
+                    </li>
+                </ul>
+            </div>            
         </nav>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
