--- a/medicine.html
+++ b/medicine.html
@@ -26,7 +26,11 @@
             </ul>
         </nav>
         <h1 class="text-center my-4">Computing in Medicine</h1>
-        <p class="text-center">Computers have been used in a wide variety of application in the field of medicine.</p>
+        <div class="card mx-auto" style="width: 80%">
+            <div class="card-body">
+                Computers have been used in many different applications within medicine
+            </div>
+        </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
