--- a/medicine.html
+++ b/medicine.html
@@ -31,6 +31,67 @@
                 Computers have been used in many different applications within medicine
             </div>
         </div>
+        <div class="row my-5 mx-5">
+            <div class="col-4 d-flex">
+                <div class="card" style="width: 40rem">
+                    <img src="pictures/medicine-1.png" class="card-img-top" alt="Electronic Health Records" height="250">
+                    <div class="card-body">
+                        <h4 class="card-title">Electronic Health Records</h4>
+                        <p class="card-text">
+                            Electronic Health Records (EHRs) are a powerful contribution from the field of computing,
+                            fundamentally improving healthcare delivery. By digitizing patient information,
+                            they create a single, accessible source of truth that can be shared seamlessly and
+                            securely among authorized providers. This eliminates fragmented paper records,
+                            reduces medical errors, and enables more coordinated and efficient care. 
+                            Furthermore, the vast datasets within EHRs fuel medical research and public
+                            health initiatives, helping to identify disease trends and develop new treatments.
+                            Ultimately, EHRs leverage computing to create a smarter, safer, and more proactive
+                            health system for society.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 d-flex">
+                <div class="card" style="width: 40rem">
+                    <img src="pictures/medicine-1.png" class="card-img-top" alt="Electronic Health Records" height="250">
+                    <div class="card-body">
+                        <h4 class="card-title">Electronic Health Records</h4>
+                        <p class="card-text">
+                            Electronic Health Records (EHRs) are a powerful contribution from the field of computing,
+                            fundamentally improving healthcare delivery. By digitizing patient information,
+                            they create a single, accessible source of truth that can be shared seamlessly and
+                            securely among authorized providers. This eliminates fragmented paper records,
+                            reduces medical errors, and enables more coordinated and efficient care. 
+                            Furthermore, the vast datasets within EHRs fuel medical research and public
+                            health initiatives, helping to identify disease trends and develop new treatments.
+                            Ultimately, EHRs leverage computing to create a smarter, safer, and more proactive
+                            health system for society.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 d-flex">
+                <div class="card" style="width: 40rem">
+                    <img src="pictures/medicine-1.png" class="card-img-top" alt="Electronic Health Records" height="250">
+                    <div class="card-body">
+                        <h4 class="card-title">Electronic Health Records</h4>
+                        <p class="card-text">
+                            Electronic Health Records (EHRs) are a powerful contribution from the field of computing,
+                            fundamentally improving healthcare delivery. By digitizing patient information,
+                            they create a single, accessible source of truth that can be shared seamlessly and
+                            securely among authorized providers. This eliminates fragmented paper records,
+                            reduces medical errors, and enables more coordinated and efficient care. 
+                            Furthermore, the vast datasets within EHRs fuel medical research and public
+                            health initiatives, helping to identify disease trends and develop new treatments.
+                            Ultimately, EHRs leverage computing to create a smarter, safer, and more proactive
+                            health system for society.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
