Finished medicine page and navbar

--- a/Assamee.html
+++ b/Assamee.html
@@ -24,7 +24,15 @@
                     <a href="Assamee.html" class="nav-link active" aria-current="page">Artificial Intelligence</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item m-0 p-0">
+                    <a href="https://github.com/TheFlugeler/teamwork-makes-the-dreamwork" class="nav-link m-0 p-0">
+                        <img src="pictures/github.png" width="50" height="50">
+                    </a>
+                </li>
+            </ul>
         </nav>
+        
     <div class="p-3 mb-2 bg-secondary text-white">
       <h1>Artificial Intelegence</h1>
     
