--- a/turing.html
+++ b/turing.html
@@ -23,6 +23,13 @@
                     <a href="Assamee.html" class="nav-link">Artificial Intelligence</a><!--Add link to Assamee's website-->
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item m-0 p-0">
+                    <a href="https://github.com/TheFlugeler/teamwork-makes-the-dreamwork" class="nav-link m-0 p-0">
+                        <img src="pictures/github.png" width="50" height="50">
+                    </a>
+                </li>
+            </ul>
         </nav>
         <div class="text-center p-3 mb-2 bg-secondary text-white">
             <h1>The work of Alan Turing and Bletchley Park</h1>
