--- a/medicine.html
+++ b/medicine.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+        </nav>
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
                 <li class="nav-item"></li>
@@ -24,11 +24,25 @@
                     <a href="Assamee.html" class="nav-link">Artificial Intelligence</a><!--Add link to Assamee's website-->
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item m-0 p-0">
+                    <a href="https://github.com/TheFlugeler/teamwork-makes-the-dreamwork" class="nav-link m-0 p-0">
+                        <img src="pictures/github.png" width="50" height="50">
+                    </a>
+                </li>
+            </ul>
         </nav>
         <h1 class="text-center my-4">Computing in Medicine</h1>
         <div class="card mx-auto" style="width: 80%">
             <div class="card-body">
-                Computers have been used in many different applications within medicine
+                Computers have fundamentally transformed medicine, creating an overwhelmingly positive impact on 
+                healthcare delivery and patient outcomes. They are the backbone of modern diagnostics, powering advanced 
+                imaging systems and analyzing complex medical data to enable earlier and more accurate detection of diseases. 
+                In treatment, they facilitate minimally invasive robotic surgery and allow for the development of personalized 
+                therapy plans. Furthermore, computers have streamlined administrative tasks, secured electronic health records 
+                for better coordination of care, and accelerated vital medical research by processing vast amounts of scientific 
+                data. By enhancing precision, efficiency, and accessibility across the entire medical field, computers have undeniably 
+                saved countless lives and improved the overall health of society.
             </div>
         </div>
         <div class="row my-5 mx-5">
@@ -53,45 +67,43 @@
             </div>
             <div class="col-4 d-flex">
                 <div class="card" style="width: 40rem">
-                    <img src="pictures/medicine-1.png" class="card-img-top" alt="Electronic Health Records" height="250">
+                    <img src="pictures/medicine-3.jpg" class="card-img-top" alt="Data Analysis" height="250">
                     <div class="card-body">
-                        <h4 class="card-title">Electronic Health Records</h4>
+                        <h4 class="card-title">Medical Data Analysis</h4>
                         <p class="card-text">
-                            Electronic Health Records (EHRs) are a powerful contribution from the field of computing,
-                            fundamentally improving healthcare delivery. By digitizing patient information,
-                            they create a single, accessible source of truth that can be shared seamlessly and
-                            securely among authorized providers. This eliminates fragmented paper records,
-                            reduces medical errors, and enables more coordinated and efficient care. 
-                            Furthermore, the vast datasets within EHRs fuel medical research and public
-                            health initiatives, helping to identify disease trends and develop new treatments.
-                            Ultimately, EHRs leverage computing to create a smarter, safer, and more proactive
-                            health system for society.
+                            Computers have become indispensable in medical data analysis, dramatically accelerating the 
+                            speed and accuracy of diagnosis. By processing vast datasets of patient records, lab results, 
+                            and genetic information, powerful algorithms can identify subtle patterns and correlations that 
+                            escape the human eye. This capability enables earlier detection of diseases like cancer and diabetes, 
+                            allows for personalized treatment plans based on an individual's unique profile, and predicts potential 
+                            health risks before they become critical. This positive impact translates into a healthier society through 
+                            more proactive and effective healthcare, ultimately saving lives, reducing long-term treatment costs, and 
+                            improving patient outcomes on a massive scale.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-4 d-flex">
                 <div class="card" style="width: 40rem">
-                    <img src="pictures/medicine-1.png" class="card-img-top" alt="Electronic Health Records" height="250">
+                    <img src="pictures/medicine-2.jpg" class="card-img-top" alt="Medical Imagery" height="250">
                     <div class="card-body">
-                        <h4 class="card-title">Electronic Health Records</h4>
+                        <h4 class="card-title">Medical Imagery</h4>
                         <p class="card-text">
-                            Electronic Health Records (EHRs) are a powerful contribution from the field of computing,
-                            fundamentally improving healthcare delivery. By digitizing patient information,
-                            they create a single, accessible source of truth that can be shared seamlessly and
-                            securely among authorized providers. This eliminates fragmented paper records,
-                            reduces medical errors, and enables more coordinated and efficient care. 
-                            Furthermore, the vast datasets within EHRs fuel medical research and public
-                            health initiatives, helping to identify disease trends and develop new treatments.
-                            Ultimately, EHRs leverage computing to create a smarter, safer, and more proactive
-                            health system for society.
+                            Computers have revolutionized medical imaging, creating a profoundly positive impact on society.
+                            They are integral to technologies like MRI, CT scans, and digital X-rays, enabling the creation
+                            of highly detailed, cross-sectional views of the human body. This allows for earlier and more 
+                            accurate detection of diseases, from cancers to neurological disorders, significantly improving
+                            patient outcomes. Furthermore, computer algorithms assist in analyzing images, reducing human error, 
+                            and streamlining diagnoses. By facilitating non-invasive exploration and precise treatment planning,
+                            computers in medical imagery save countless lives, reduce recovery times, and enhance the overall 
+                            quality and efficiency of healthcare worldwide.
                         </p>
                     </div>
                 </div>
             </div>
-
         </div>
-        
+        Information Source: <a href="chat.deepseek.com">Deepseek</a> [11/2025]
+
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
