--- a/medicine.html
+++ b/medicine.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
-        </nav>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
                 <li class="nav-item"></li>
