--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="medicine.html" class="nav-link">Medicine</a>
                     </li> 
                     <li class="nav-item">
-                        <a href="Assamee.html" class="nav-link">Assamee</a>
+                        <a href="Assamee.html" class="nav-link">Artificial Intelligence</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
