finished turing page

--- a/turing.html
+++ b/turing.html
@@ -30,12 +30,39 @@
             <p>
                 During World War 2 the main way that the Nazi would communicate was through morse code. 
                 Their messages would be encrypted by the Enigma, machine which would use a set of rotating wheels and a pinboard to scramble the message.
+                A team of mathimatical minds were recruited and worked at Bletchley Park to crack the code.
+                They were grouped up into numbered huts which focus on different aspects of cracking the code.
                 <br><br>
 
             </p>
-            <img src="pictures/bombe.jpg" width="50%">
-            <img src="pictures/enigma.jpg" width="50%">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card bg-dark text-white">
+                        <img src="pictures/bombe.jpg" class="card-img-top" alt="Not Loaded">
+                        <div class="card-body"r>
+                            <h5 class="card-title">The Bombe</h5>
+                            <p class="card-text text-white">
+                                The bombe was the solution to cracking the enigma. 
+                                It used rotating wheels to try every combination. 
+                                This by itself however was not fast enough to decipher the Enigma. 
+                                Another member of Bletchley Park Gordon Welshman built the diagonal board a system to speed up the processing.
+                                Before working on the bombe Gordon Welshman worked on traffic control tracking the sender and reciever of messages to gain context.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card bg-dark text-white">
+                        <img src="pictures/Alan_Turing.jpg" class="card-img-top" alt="Not Loaded">
+                        <div class="card-body"r>
+                            <h5 class="card-title">The Bombe</h5>
+                            <p class="card-text text-white">
+                                Alan Turing was the main contributor to the Bletchley park. His work spans beyond that of Bletchley and his contributions to the feild of computer science spans form AI to cyber security.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </body>
 </html>
