--- a/turing.html
+++ b/turing.html
@@ -62,7 +62,7 @@
                     <div class="card bg-dark text-white">
                         <img src="pictures/Alan_Turing.jpg" class="card-img-top" alt="Not Loaded">
                         <div class="card-body"r>
-                            <h5 class="card-title">The Bombe</h5>
+                            <h5 class="card-title">Alan Turing</h5>
                             <p class="card-text text-white">
                                 Alan Turing was the main contributor to the Bletchley park. His work spans beyond that of Bletchley and his contributions to the feild of computer science spans form AI to cyber security.
                             </p>
@@ -71,5 +71,6 @@
                 </div>
             </div>
         </div>
+        <small>Code Source: <a href="https://github.com/ethlopez">Ethan Lopez</a></small>
     </body>
 </html>
