Added some final details

--- a/Assamee.html
+++ b/Assamee.html
@@ -83,7 +83,15 @@
         </td>
         </tr>
     </table>
-    
+
+    <div class = "my-5">
+    <p>
+        Information Source: <a href="https://gemini.google.com/app"> Gemini AI</a> [11/2025]
+    </p>
+    <p>
+        Code Source: As-Samee Clayton [11/2025]
+    </p>
+    </div>
     </div>
 </body>
 </html>
