--- a/Assamee.html
+++ b/Assamee.html
@@ -84,15 +84,10 @@
         </tr>
     </table>
 
-    <div class = "my-5">
-    <p>
-        Information Source: <a href="https://gemini.google.com/app"> Gemini AI</a> [11/2025]
-    </p>
-    <p>
-        Code Source: As-Samee Clayton [11/2025]
-    </p>
-    </div>
-    </div>
+
+    <small>
+        Information Source: <a href="https://gemini.google.com/app"> Gemini AI</a> [11/2025]</small>
     <small>Code Source: <a href="https://github.com/Assamee">Assamee Clayton</a></small>
+    </div>
 </body>
 </html>
