Upstream push with comments and review.

--- a/turing.html
+++ b/turing.html
@@ -40,7 +40,7 @@
                 A team of mathimatical minds were recruited and worked at Bletchley Park to crack the code.
                 They were grouped up into numbered huts which focus on different aspects of cracking the code.
                 <br><br>
-
+                <!-- Typos (Mathimatical, Nazi)-->
             </p>
             <div class="row">
                 <div class="col-sm-6">
@@ -54,6 +54,7 @@
                                 This by itself however was not fast enough to decipher the Enigma. 
                                 Another member of Bletchley Park Gordon Welshman built the diagonal board a system to speed up the processing.
                                 Before working on the bombe Gordon Welshman worked on traffic control tracking the sender and reciever of messages to gain context.
+                                <!-- Grammar - Park, Gordon-->
                             </p>
                         </div>
                     </div>
@@ -65,6 +66,7 @@
                             <h5 class="card-title">Alan Turing</h5>
                             <p class="card-text text-white">
                                 Alan Turing was the main contributor to the Bletchley park. His work spans beyond that of Bletchley and his contributions to the feild of computer science spans form AI to cyber security.
+                                <!-- Typos - Feild, Grammar - the Bletchley Park-->
                             </p>
                         </div>
                     </div>
