--- a/medicine.html
+++ b/medicine.html
@@ -11,6 +11,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
+                <!-- Extra li closing tag present -->
                 <li class="nav-item"></li>
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
