--- a/turing.html
+++ b/turing.html
@@ -10,6 +10,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <a class="navbar-brand mx-2" href="#">Teamwork</a>
             <ul class="navbar-nav">
+                <!-- Extra li closing tag present -->
                 <li class="nav-item"></li>
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
@@ -46,6 +47,7 @@
                 <div class="col-sm-6">
                     <div class="card bg-dark text-white">
                         <img src="pictures/bombe.jpg" class="card-img-top" alt="Not Loaded">
+                        <!-- Invalid attribute r in div tag, occours multiple times on this page -->
                         <div class="card-body"r>
                             <h5 class="card-title">The Bombe</h5>
                             <p class="card-text text-white">
@@ -61,6 +63,7 @@
                 <div class="col-sm-6">
                     <div class="card bg-dark text-white">
                         <img src="pictures/Alan_Turing.jpg" class="card-img-top" alt="Not Loaded">
+                        <!-- Invalid attribute r in div tag, occours multiple times on this page -->
                         <div class="card-body"r>
                             <h5 class="card-title">Alan Turing</h5>
                             <p class="card-text text-white">
