--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand mx-2" href="#">Teamwork</a>
                 <ul class="navbar-nav">
+                <!-- Extra li closing tag present -->
                     <li class="nav-item"></li>
                         <a href="index.html" class="nav-link active" aria-current="page">Home</a>
                     </li>
@@ -76,6 +77,7 @@
         </div>
         </div>
     </body>
+    <!-- Script should be within the body -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </html>
